web-infras/parser/tests/fixtures/self-added/let-as-identifier/strict-mode/let-as-func-declar-name/output.txt
[SyntaxError]: unexpect keyword in strict mode (2,10)
2|function let() {
 |        ^
[SyntaxError]: unexpect keyword in strict mode (2,10)
2|function let() {
 |        ^
[SyntaxError]: unexpect keyword in strict mode (2,10)
2|function let() {
 |        ^
